-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 17, 21
-
Component/s: hotspot
-
b14
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8309559 | 17.0.9-oracle | Calvin Cheung | P4 | Resolved | Fixed | b01 |
| JDK-8307430 | 17.0.8 | Yuri Nesterenko | P4 | Resolved | Fixed | b02 |
| JDK-8309561 | 11.0.21-oracle | Calvin Cheung | P4 | Resolved | Fixed | b01 |
| JDK-8307762 | 11.0.20 | Paul Hohensee | P4 | Resolved | Fixed | b02 |
- a global timeout (controlled via ErrorLogTimeout)
- local error reporting step timeouts.
The latter aims to "give the JVM a kick" if it gets stuck in one particular place during error reporting. This prevents one error reporting step from hogging all the time allotted to error reporting under ErrorLogTimeout.
There are three situations where atm we suppress the global error timeout:
- if the JVM is embedded and the launcher has its abort hook installed. Obviously, that must be allowed to run.
- if the user specified one or more OnError commands to run, and these did not yet run. These must have a chance to run unmolested.
- if the user (typically developer) specified ShowMessageBoxOnError, and the error box has not yet been shown
There is a bug though, that also prevents the step timeout from firing if either condition is true. That is plain wrong.
In addition to that, the test interval WatcherThread uses to check for timeouts should be decreased. It sits at 1 second, which is too coarse-grained.
- backported by
-
JDK-8307430 Error handling step timeouts should never be blocked by OnError and others
-
- Resolved
-
-
JDK-8307762 Error handling step timeouts should never be blocked by OnError and others
-
- Resolved
-
-
JDK-8309559 Error handling step timeouts should never be blocked by OnError and others
-
- Resolved
-
-
JDK-8309561 Error handling step timeouts should never be blocked by OnError and others
-
- Resolved
-
- duplicates
-
JDK-8302073 Specifying OnError handler prevents WatcherThread to break a deadlock in report_and_die()
-
- Closed
-
- relates to
-
JDK-8307811 [TEST] compilation of TimeoutInErrorHandlingTest fails after backport of JDK-8303861
-
- Resolved
-
-
JDK-8303862 Decoder should not use malloc during error handling
-
- Closed
-
-
JDK-8166944 Hanging Error Reporting steps may lead to torn error logs.
-
- Resolved
-
-
JDK-8302073 Specifying OnError handler prevents WatcherThread to break a deadlock in report_and_die()
-
- Closed
-
- links to
-
Commit
openjdk/jdk11u-dev/1f601e90
-
Commit
openjdk/jdk17u-dev/345e370f
-
Commit
openjdk/jdk/a00f5d24
-
Review
openjdk/jdk11u-dev/1856
-
Review
openjdk/jdk17u-dev/1211
-
Review
openjdk/jdk/12936