8303861: Error handling step timeouts should never be blocked by OnError and others

Reviewed-by: phh, stuefe
Backport-of: a00f5d24d3824e3ab84208401a967efe0e7bf88e